# ShopEase-An-Ecommerce-platform-

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  ecommerce.db  gunicorn.conf.py  netlify.toml  pyproject.toml  render.yaml  requirements.txt  setup.py
backend/: auth.py  database.py  main.py  schemas.py  seed_data.py
frontend/: auth.html  index.html  welcome.html
frontend/js/: api.js  app.js  auth-page.js  auth.js  cart.js
