[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce"
version = "1.0.0"
description = "E-commerce platform with FastAPI and React"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9,<3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi==0.95.2",
    "uvicorn[standard]==0.21.1",
    "gunicorn==20.1.0",
    "python-multipart==0.0.6",
    "sqlalchemy==1.4.47",
    "alembic==1.10.3",
    "psycopg2-binary==2.9.5",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==1.10.7",
    "email-validator==1.3.1",
    "python-dotenv==1.0.0",
    "typing-extensions==4.5.0"
]
